fix: make infinity cell Java 8 compatible